--- a/SESH_lite/client/templates/dashboard/dashboard.html
+++ b/SESH_lite/client/templates/dashboard/dashboard.html
@@ -1,25 +1,37 @@
 <template name="dashboard">
+  {{setTitle "Courses"}}
   <div class="template-dashboard">
     <div class="page-header">
-      <h1>My Courses</h1>
-
-      <div class="page-actions pull-right">
-        <btn class="btn btn-primary" data-toggle="modal" data-target="#addItemModal">+ Add Item</btn>
+      <h1>Course Dashboard</h1>
+    </div>
+    <div class="col-md-4 col-xs-12 pull-right clearfix">
+      <div class="map-container">
+        {{> googleMap name="exampleMap" options=exampleMapOptions}}
       </div>
     </div>
 
-    <ul class="list-group">
-      {{#each myMeetings}}
-        {{ > meetingRow this }}
-      {{/each}}
-    </ul>
 
-    <h1>All Courses</h1>
+  <div class="col-md-8 form-inline">
+    <h2 class="clearfix">All Courses <input class="pull-right form-control" placeholder="Search" id="course-search"/> </h2>
     <ul class="list-group">
-      {{#each meetings}}
-        {{ > meetingRow this }}
+      {{#each otherMeetings}}
+          {{ > meetingRow }}
       {{/each}}
     </ul>
+  </div>
+
+
+    <div class="col-md-8 clearfix">
+        <h2>Courses I Instruct</h2>
+        <div class="page-actions pull-right">
+          <btn class="btn btn-primary" data-toggle="modal" data-target="#addItemModal">+ Add Item</btn>
+        </div>
+        <ul class="list-group">
+          {{#each myMeetings}}
+            {{ > meetingRow this }}
+          {{/each}}
+        </ul>
+    </div>
   </div>
 
 
@@ -51,4 +63,14 @@
       </div>
     </div>
   </div>
+  <style>.map-container {
+  margin:auto;
+  width: 100%;
+  height: 300px;
+}
+.map-canvas {
+    border-radius:8px;
+    box-shadow: 0 0 10px #EEE;
+}
+</style>
 </template>
