--- a/SESH_lite/client/templates/home/home.html
+++ b/SESH_lite/client/templates/home/home.html
@@ -1,4 +1,5 @@
 <template name="home">
+  {{setTitle}}
   <div class="template-home">
     <div class="page-header">
       <h1>Welcome to {{PROJECT_NAME}}</h1>
