--- a/SESH_lite/client/templates/profile/profile.html
+++ b/SESH_lite/client/templates/profile/profile.html
@@ -13,6 +13,7 @@
 
       <h2>Profile:</h2>
       {{#with profile}}
+        {{setTitle "Profile - " name}}
         <form class="form-horizontal col-md-6">
           <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Name:</label>
