--- a/SESH_lite/client/templates/dashboard/dashboard.html
+++ b/SESH_lite/client/templates/dashboard/dashboard.html
@@ -53,6 +53,14 @@
                 <label>Cost</label>
                 <input type="number" class="form-control" name="cost" placeholder="Cost">
               </div>
+              <div class="form-group">
+                <label>Latitude</label>
+                <input type="number" class="form-control" name="lat" placeholder="Cost">
+              </div>
+              <div class="form-group">
+                <label>Longitude</label>
+                <input type="number" class="form-control" name="lng" placeholder="Cost">
+              </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
