--- a/SESH_lite/client/templates/_shared/header.jade
+++ b/SESH_lite/client/templates/_shared/header.jade
@@ -1,6 +1,6 @@
 template(name='header')
   setTitle
-  nav.blue.accent-2
+  nav.indigo.accent-1
     .nav-wrapper
       a.brand-logo(href="{{ pathFor 'home' }}")
         {{PROJECT_NAME}}  
